previews and next button and database

--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -6,14 +6,16 @@
 
 <p> <%= time_ago_in_words(@find_article.created_at) %> </p>
 
-<h2><%= @toast %></h2>
 
 
-<p><%= link_to "Edit", edit_article_path %>
-   <%= link_to "Delete", 
-     article_path, 
-     method: :delete, 
-     data: { confirm: "Really?"} %></p>
+<% if @find_article.user.id == current_user.id %>
+  <p><%= link_to "Edit", edit_article_path %>
+    <%= link_to "Delete", 
+      article_path, 
+      method: :delete, 
+      data: { confirm: "Really?"} %></p>
+<% end %>
+<p>User: <%= @find_article.user.email %></p>
 <p>
   <%= link_to_unless_current "Previews", @find_article.previews %>
   <%= link_to_unless_current "Next", @find_article.next %>
@@ -24,7 +26,7 @@
     <p>Commenter: <%= comment.commenter %></p>
     <p>Comment: <%= comment.body %></p>
     <% end %>
-<%= form_with model: [@find_article, @find_article.comments.build ] do |form| %>
+<%= form_with model: [@find_article, @find_article.comments.build] do |form| %>
   <div>
     <%= form.label :commenter %><br>
     <%= form.text_field :commenter %>
@@ -38,6 +40,7 @@
   <div>
     <%= form.submit %>
   </div>
+
 <% end %>
-<h2>Add a Comment</h2>
+
 
