--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -1,1 +1,14 @@
-<p><%= link_to_unless_current "Home", articles_path %> | <%= link_to_unless_current "New Article", new_article_path %></p>
+<p>
+<span><%= link_to_unless_current "Home", articles_path %> | <%= link_to_unless_current "New Article", new_article_path %></span>
+
+<span style="float: right">
+<% if user_signed_in? %>
+    <%= link_to "Sign out", destroy_user_session_path, method: :delete %>
+<% else %>
+    <%= link_to_unless_current "Sign in", new_user_session_path %>
+    <%= link_to_unless_current "Sign up", new_user_registration_path %>
+<% end %>
+</span>
+</p>
+
+
